data/derived/sp14/progs/unify/prog4823.ml.out
Characters 66-76:
  else helper x n-1 x::acc
       ^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int
